# platform.core.system.libslp-sensor

./: AUTHORS  CMakeLists.txt  COPYING  build.sh  project.config  report.txt  sensor.pc.in
TC/: build.sh
TC/unit/: Makefile  tslist  utc_SensorFW_sf_check_rotation_func.c  utc_SensorFW_sf_connect_func.c  utc_SensorFW_sf_disconnect_func.c  utc_SensorFW_sf_get_data_func.c  utc_SensorFW_sf_get_properties_func.c  utc_SensorFW_sf_is_sensor_event_available_func.c  utc_SensorFW_sf_read_raw_data_func.c  utc_SensorFW_sf_register_event_func.c  utc_SensorFW_sf_start_func.c  utc_SensorFW_sf_stop_func.c  utc_SensorFW_sf_unregister_event_func.c
debian/: changelog  control  control.libs  libslp-sensor-0.postinst.in  libslp-sensor-dev.install.in  rules
include/: SLP_SensorFW_PG.h  sensor.h  sensor_accel.h  sensor_barometer.h  sensor_fusion.h  sensor_geomag.h  sensor_gyro.h  sensor_light.h  sensor_motion.h  sensor_proxi.h
packaging/: libslp-sensor.spec  sensor.changes  sensor.spec
src/: client.cpp
